Changing bio to first-person

--- a/_includes/bio.textile
+++ b/_includes/bio.textile
@@ -1,1 +1,1 @@
-Enthusiastic, versatile computing finalist with 12 months commercial experience in cutting edge software engineering for Lockheed Martin.
+I'm an enthusiastic, versatile computing finalist with 12 months commercial experience in cutting edge software engineering for Lockheed Martin.
